# git-package

./: pyproject.toml  setup.py
egg_package/: __init__.py
src/coiled_git_package/: __init__.py
